# LabNote

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
labnote/: __main__.py
labnote/app/: application.py  commands.py  document_manager.py  file_watcher.py  i18n.py  settings.py
labnote/core/: document.py  exporters.py  markdown_engine.py  search.py  tables.py  toc.py
labnote/ui/: dialogs.py  document_view.py  main_window.py  preview_renderer.py  themes.py  widgets.py
tests/: test_markdown_engine.py  test_search_and_documents.py  test_tables.py
